--- a/src/styles/theme.dark.css
+++ b/src/styles/theme.dark.css
@@ -3,7 +3,7 @@ html[data-theme='dark'] {
     --color-text: #cfd4d8;
     --color-background-button: #4c545d;
     --color-background: #1e2124;
-    --color-border: transparent;
+    --color-border: #58595a;
     --color-background-hover:#57616b;
     --color-background-raised: #353b41;
     --color-background-active: #3399ff;
